# BROT

./: TODO.md
BVM/: CMakeLists.txt  Makefile  TODO.md  log.txt  tidy.txt
BVM/src/: main.cpp  typedefs.hpp
BVM/test-files/: BVM_TEST1.hex  FIB.hex  sym.hex
assembler/: CMakeLists.txt  Makefile
assembler/src/: assembler.hpp  main.cpp  tests.hpp  typedefs.hpp
assembler/test-files/asm-input/: FIB.brot  SMOKE_TEST.brot  TEST.brot  TEST_R.brot
assembler/test-files/hex-output/: BVM_TEST1.hex  FIB.hex  SMOKE_TEST.hex  TEST.hex  sym.hex
spec/: .project  BROT-scratchpad.md  CLAUDE.md  SPEC.md  TEST.brot
spec/claude-tests/: BROT-os-programs.md  BROT-stress-tests.md
